namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-gpc-anomalies-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-gpc-anomalies-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "dash_ccdlalbs"
    cloud-platform.justice.gov.uk/application: "GPC anomalies tool"
    cloud-platform.justice.gov.uk/owner: "corporate data science team: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/gpc-anomalies"
    cloud-platform.justice.gov.uk/team-name: "gpc-anomalies-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
